able to compile with snake_game_3d subdirectory!

--- a/snake_game_3d/CMakeLists.txt
+++ b/snake_game_3d/CMakeLists.txt
@@ -3,4 +3,5 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
 add_library(SnakeGame snake_game_3d.cpp)
 target_link_libraries(SnakeGame PRIVATE Helpers)
+target_link_libraries(SnakeGame PRIVATE glfw)
 target_include_directories(SnakeGame PUBLIC .)
